Remove short mode flag

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,4 +32,4 @@ jobs:
         go mod download
 
     - name: Test
-      run: go test -cover -short ./pkg/...
+      run: go test -cover ./pkg/...
