export display env variable

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,4 +32,4 @@ jobs:
         go mod download
 
     - name: Test
-      run: go test -cover ./pkg/...
+      run: export DISPLAY=0 && go test -cover ./pkg/...
