--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install ubuntu dependencies.
       run: |
           sudo apt-get update
-          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev
+          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev xvfb
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
@@ -32,4 +32,4 @@ jobs:
         go mod download
 
     - name: Test
-      run: export DISPLAY=localhost:0.0 && go test -cover ./pkg/...
+      run: xvfb-run --auto-servernum go test -cover ./pkg/...
