--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,8 +25,10 @@ jobs:
           sudo apt-get -o Acquire::Retries=3 install build-essential libalut-dev libasound2-dev libc6-dev libglu1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libgl1-mesa-dev mesa-utils pkg-config xorg-dev xvfb
 
     - name: Opengl version
+      env:
+        DISPLAY: ":99.0"
       run: |
-          glxinfo | grep "OpenGL version"
+           xvfb-run --auto-servernum glxinfo | grep "OpenGL version"
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
