--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,6 @@ jobs:
           sudo apt-get -o Acquire::Retries=3 install build-essential libalut-dev libasound2-dev libc6-dev libglu1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libgl1-mesa-dev mesa-utils pkg-config xorg-dev xvfb
 
     - name: Opengl version
-      uses: openrndr/setup-opengl@v1
       env:
         DISPLAY: ":99.0"
       run: |
@@ -38,8 +37,13 @@ jobs:
       run: |
         go mod download
 
+    - uses: openrndr/setup-opengl@v1
+    - name: Opengl version after openrndr
+      env:
+        DISPLAY: ":99.0"
+      run: |
+           xvfb-run --auto-servernum glxinfo | grep "OpenGL version"
     - name: Test
-      uses: openrndr/setup-opengl@v1
       env:
         DISPLAY: ":99.0"
       run: xvfb-run --auto-servernum go test -cover ./pkg/...
