--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install ubuntu dependencies.
       run: |
           sudo apt-get update
-          sudo apt-get -o Acquire::Retries=3 install build-essential libalut-dev libasound2-dev libc6-dev libglu1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libgl1-mesa-dev mesa-utils pkg-config xorg-dev xvfb
+          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev
 
     - name: Opengl version
       env:
@@ -39,10 +39,8 @@ jobs:
 
     - uses: openrndr/setup-opengl@v1
     - name: Opengl version after openrndr
-      env:
-        DISPLAY: ":99.0"
       run: |
-           xvfb-run --auto-servernum glxinfo | grep "OpenGL version"
+           xvfb-run glxinfo | grep "OpenGL version"
     - name: Test
       env:
         DISPLAY: ":99.0"
