--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install ubuntu dependencies.
       run: |
           sudo apt-get update
-          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev ubuntu-drivers-common
+          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev xvfb
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
@@ -59,13 +59,8 @@ jobs:
       run: |
         go mod download
 
-    - uses: openrndr/setup-opengl@v1
-
     - name: lspci to detect stuff
       run: lspci
-
-    - name: ubuntu drivers
-      run: ubuntu-drivers devices
 
     - name: Opengl version after openrndr
       run: |
