--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install ubuntu dependencies.
       run: |
           sudo apt-get update
-          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev xvfb
+          sudo apt-get -o Acquire::Retries=3 install libgl1-mesa-dev xorg-dev xvfb mesa-utils
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
